tests/paczka1/fuzzy1/53779968.err
Error in line 3: Ypgu0 A425 85,8
Error in line 4: ZkFYcdpF S659 2,6
Error in line 19: Ypgu0 A425 45,1
Error in line 20: Ypgu0 S746 10,0
Error in line 26: WI4DbtwxX S220 15,2
Error in line 34: HBJ S220 227,7
Error in line 24: ZkFYcdpF S220 172,2
